@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+ * Make Wiggle density tracks indicate out-of-range values using
+   separate clip markers at the top and bottom of the color field,
+   rather than showing the out-of-range region as a third color (or
+   black or white).  Thanks to Gregg Helt for suggesting this.
+
  * Fixed failures of setup.sh legacy BAM support installation caused
    by samtools taking down their old SourceForge subversion
    repository.
